--- a/NutriFit/NutriFit/Views/NovoJeloView.xaml
+++ b/NutriFit/NutriFit/Views/NovoJeloView.xaml
@@ -72,7 +72,7 @@
 
         <Label Content="Slika" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0" />
         <Button Content="Browse" Command="{Binding BrowseCommand}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="235,6,0,0" Width="80" Height="31" />
-        <TextBox IsReadOnly="True" Text="{Binding Slika}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,10,0,7" Width="126" />
+        <TextBox IsReadOnly="True" x:Name="putanja" Text="{Binding Slika}" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,10,0,7" Width="126" />
 
         <Label Content="Šifra kasa" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30,0" />
         <TextBox Text="{Binding SifraKasa, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="96,4,0,5" />
